# talktome

./: .gitignore  .mcp.json  ARCHITECTURE.md  README.md  plugin.json  pyproject.toml
.claude-plugin/: plugin.json
adapters/codex/: AGENTS.md  config.toml
hooks/: auto_register.py  check_inbox.py  check_mailbox.py  hooks.json
skills/bridge/: SKILL.md
src/talktome/: __init__.py  __main__.py  dashboard.html  db.py  hooks.py  proxy.py  queue.py  registry.py  server.py
tests/: test_cli.py  test_e2e.py  test_e2e_lifecycle.py  test_install.py  test_naming.py  test_queue.py  test_registry.py  test_server.py  test_sessions.py  test_tasks.py
