[project]
name = "talktome"
version = "0.1.0"
description = "real-time bridge for cross-project claude code communication"
readme = "README.md"
authors = [
    { name = "Aditya Kumar", email = "adityakuma0308@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.5",
]

[project.scripts]
talktome = "talktome:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
